# FaaSOnIoT

./: README.md
core/: README.md  deploy_core.sh
core/api_server/: README.md  docker-compose.yml  pom.xml
core/api_server/src/main/java/com/example/demo/: DemoApplication.java
core/api_server/src/main/java/com/example/demo/Controllers/: APIController.java  ApiControllers.java  DBOperationRunner.java  SchemaController.java  configurationFileObject.java  resourcesClassObject.java
core/api_server/src/main/java/com/example/demo/Model/: Schema.java
core/api_server/src/main/java/com/example/demo/Repository/: SchemaRepository.java
core/api_server/src/main/java/com/example/demo/Utils/: Utils.java
core/api_server/src/main/resources/: application.properties
core/cli/: go.mod
core/cli/cmd/: create.go  root.go
core/cli/fit/: go.mod
core/cli/fit/cmd/: root.go
core/data_xchange/: CMakeLists.txt  README.md  main.cpp
core/data_xchange/Messenger/: Messenger.cpp  Messenger.h
core/data_xchange/Permissions/: PermissionFileParser.cpp
core/data_xchange/Publishers/: Publisher.cpp  Publisher.h  Publishers.cpp  Publishers.h
core/data_xchange/PythonWrapper/: PosixMessageQueueWrapper.cpp  PythonBindings.cpp
core/data_xchange/Server/: Server.cpp  Server.h
core/data_xchange/Server/Request/: Request.cpp  Request.h
core/data_xchange/Subscribers/: Subcriber.cpp  Subcriber.h  Subscriber.cpp  Subscriber.h  Subscribers.cpp  Subscribers.h
core/data_xchange/Topic/: Topic.cpp  Topic.h
core/data_xchange/UserApplication/: UserApplication.cpp  UserApplication.h
core/data_xchange/messages/: pub_sub_messages.pb.cc  pub_sub_messages.pb.h  pub_sub_messages.proto
core/deployment_engine/: database_config.py  database_connection_test.py  database_main.py  database_manager.py  demo_code.py  deployer.py  deployer_main.py  permission_manager.py  requirements.txt  start_deployment_engine.sh  user_config.json
core/deployment_engine/demo_app/RGB_LED_Strips/: README.txt
core/deployment_engine/demo_app/demp_code/: client.py  server.py
core/deployment_engine/demo_app_1/: requirements.txt  user_config.json
core/deployment_engine/demo_app_1/demo_code/: client.py
core/deployment_engine/demo_app_2/: user_config.json
core/deployment_engine/demo_app_2/demo_code/: server.py
core/ui/: app.js  package-lock.json
core/ui/js/: upload.js
l4re/l4_client_mt_server/: Makefile  README.md  client.cc  client_server.cfg  l4_re_snapshot_patch  rpc_decl.h  server.cc
sample_apps/client/: app.config
sample_apps/client/demo_code/: client.py
sample_apps/server/: app.config
